Fix spacing. Oops.

--- a/styles/_typography.less
+++ b/styles/_typography.less
@@ -5,7 +5,6 @@ body {
   font-family: @base-font;
   font-size: 20px;
   line-height: 1.6em;
-  letter-spacing: 0.2px;
 
   .lead {
     font-size: 1.5rem;
