--- a/styles/application.css
+++ b/styles/application.css
@@ -48,7 +48,6 @@ body {
   font-family: 'Palanquin', 'Helvetica', 'Lucida Grande', sans-serif;
   font-size: 20px;
   line-height: 1.6em;
-  letter-spacing: 0.2px;
 }
 body .lead {
   font-size: 1.5rem;
